@@ -1,3 +1,8 @@
+2016-03-02  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (link_command): Accept "unset link <specific axis>"
+	(regression since 5.0).
+
 2016-03-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/internal.c (f_assign): Sanity check for array index that 
